Se implementa RecyclerView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Lab03_registroBusquedaEstudiantes"
         tools:targetApi="34">
         <activity
+            android:name=".ListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_list"
+            android:theme="@style/Theme.Lab03_registroBusquedaEstudiantes" />
+        <activity
             android:name=".SearchActivity"
             android:exported="false" />
         <activity
